Heat ingress network policy
- Also removed heat cloudwatch as we don't deploy it
- Also removed heat-trusts jobs as we don't enable it

Change-Id: I20602a129aa6ce1db9f5b9bc04134cc2c2c3231c
Related-Prod: https://mirantis.jira.com/browse/PRODX-34772

--- a/openstack_controller/templates/child_objects/ingress.yaml
+++ b/openstack_controller/templates/child_objects/ingress.yaml
@@ -4,6 +4,8 @@ ingress:
     ingress:
       connections:
         egress:
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["http"]) | indent(12)}}
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-cfn", ["http"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-metadata", ["n-metadata"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-novncproxy", ["n-novnc"]) | indent(12)}}
