--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -36,6 +36,8 @@ keystone:
     keystone-client:
       connections:
         egress:
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["http"]) | indent(12)}}
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-cfn", ["http"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
       hash_fields: []
