--- a/openstack_controller/templates/services/orchestration.yaml
+++ b/openstack_controller/templates/services/orchestration.yaml
@@ -55,9 +55,13 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/orchestration.yaml' %}
+{%- endif %}
       manifests:
         cron_job_db_purge: true
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         job_rabbit_init: false
         secret_ca_bundle: true
         job_heat_trusts: false
