--- a/openstack_controller/templates/child_objects/compute.yaml
+++ b/openstack_controller/templates/child_objects/compute.yaml
@@ -78,6 +78,10 @@ nova:
       pod_labels:
         application: nova
         component: metadata
+      ports:
+      - port: 8775
+        name: n-metadata
+        protocol: TCP
     nova-api-osapi:
       connections:
         egress:
@@ -92,6 +96,10 @@ nova:
       pod_labels:
         application: nova
         component: os-api
+      ports:
+      - port: 8774
+        name: n-api
+        protocol: TCP
     nova-conductor:
       connections:
         egress:
@@ -135,6 +143,10 @@ nova:
       pod_labels:
         application: nova
         component: novnc-proxy
+      ports:
+      - port: 6080
+        name: n-novnc
+        protocol: TCP
 {%- if spec.openstack_version in ['queens', 'rocky', 'stein'] %}
     nova-placement-api:
       connections:
@@ -171,6 +183,7 @@ nova:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
       hash_fields:
       - network.proxy.*
       - bootstrap.*
@@ -185,6 +198,7 @@ nova:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
       hash_fields: []
       images:
       - nova_cell_setup
