--- a/openstack_controller/templates/child_objects/orchestration.yaml
+++ b/openstack_controller/templates/child_objects/orchestration.yaml
@@ -66,6 +66,7 @@ heat:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_engine
