--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -267,4 +267,10 @@ network_policies:
     messaging:rabbitmq:StatefulSet:openstack-rabbitmq-rabbitmq:
       - from:
         - default: selector
+    image:glance:Deployment:glance-api:
+      - from:
+        - default: selector
+    image:glance:Deployment:glance-registry:
+      - from:
+        - default: selector
   egress: {}
