--- a/openstack_controller/templates/services/image.yaml
+++ b/openstack_controller/templates/services/image.yaml
@@ -322,9 +322,13 @@ spec:
       secrets:
         rbd: {{ ceph.glance.secrets }}
 {%- endif %}
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/image.yaml' %}
+{%- endif %}
       manifests:
         cron_job_db_purge: true
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         job_rabbit_init: false
         job_storage_init: false
         secret_ca_bundle: true
