--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -249,4 +249,7 @@ network_policies:
     compute:nova:Deployment:nova-api-osapi:
       - from:
         - default: selector
+    placement:placement:Deployment:placement-api:
+      - from:
+        - default: selector
   egress: {}
