--- a/openstack_controller/templates/child_objects/baremetal.yaml
+++ b/openstack_controller/templates/child_objects/baremetal.yaml
@@ -6,6 +6,7 @@ ironic:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("placement", "placement", "Deployment", "placement-api", ["p-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_retrieve_swift_config
@@ -116,6 +117,7 @@ ironic:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("placement", "placement", "Deployment", "placement-api", ["p-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_pxe_init
