--- a/openstack_controller/templates/services/placement.yaml
+++ b/openstack_controller/templates/services/placement.yaml
@@ -71,8 +71,12 @@ spec:
           logger_placement:
             level: {{ spec.get('features', {}).get('logging', {}).get('placement', {}).get('level', 'INFO') }}
       manifests:
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         secret_ca_bundle: true
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/placement.yaml' %}
+{%- endif %}
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
 {% include 'base/_admin_identity.yaml' %}
