--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -147,6 +147,10 @@ neutron:
       pod_labels:
         application: neutron
         component: server
+      ports:
+        - port: 9696
+          name: q-api
+          protocol: TCP
   Job:
     neutron-bootstrap:
       connections:
