--- a/tests/fixtures/network_policies/output/identity.yaml
+++ b/tests/fixtures/network_policies/output/identity.yaml
@@ -644,6 +644,10 @@ identity:keystone:Deployment:keystone-api:
   - podSelector:
       matchLabels:
         application: tempest
+        component: bootstrap
+  - podSelector:
+      matchLabels:
+        application: tempest
         component: ks-user
   - podSelector:
       matchLabels:
