--- a/tests/fixtures/network_policies/output/placement.yaml
+++ b/tests/fixtures/network_policies/output/placement.yaml
@@ -34,6 +34,10 @@ placement:placement:Deployment:placement-api:
         component: scheduler
   - podSelector:
       matchLabels:
+        application: keystone
+        component: client
+  - podSelector:
+      matchLabels:
         application: neutron
         component: dhcp-agent
   - podSelector:
