--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -258,4 +258,7 @@ network_policies:
     orchestration:heat:Deployment:heat-cfn:
       - from:
         - default: selector
+    networking:neutron:Deployment:neutron-server:
+      - from:
+        - default: selector
   egress: {}
