--- a/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/networking/victoria_ceph_local_non_dvr.yaml
@@ -416,6 +416,8 @@ spec:
           restartPolicy: Never
       manifests:
         job_rabbit_init: false
+        network_policy: false
+        network_policy: false
         secret_ca_bundle: true
       network:
         server:
