--- a/openstack_controller/templates/child_objects/cloudprober.yaml
+++ b/openstack_controller/templates/child_objects/cloudprober.yaml
@@ -6,6 +6,7 @@ cloudprober:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
+          - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
       hash_fields: []
       images:
       - cloudprober_openstack_discovery
