--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_ironic_mt_old.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_ironic_mt_old.yaml
@@ -421,6 +421,8 @@ spec:
           restartPolicy: Never
       manifests:
         job_rabbit_init: false
+        network_policy: false
+        network_policy: false
         deployment_ironic_agent: true
         secret_ca_bundle: true
       network:
