--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_sriov.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_non_dvr_sriov.yaml
@@ -418,6 +418,8 @@ spec:
           restartPolicy: Never
       manifests:
         job_rabbit_init: false
+        network_policy: false
+        network_policy: false
         secret_ca_bundle: true
         daemonset_sriov_agent: true
       network:
