--- a/tests/fixtures/render_service_template/output/networking/yoga_ceph_local_non_dvr_bgpvpn_vpnaas.yaml
+++ b/tests/fixtures/render_service_template/output/networking/yoga_ceph_local_non_dvr_bgpvpn_vpnaas.yaml
@@ -449,6 +449,8 @@ spec:
           restartPolicy: Never
       manifests:
         job_rabbit_init: false
+        network_policy: false
+        network_policy: false
         secret_ca_bundle: true
         daemonset_bagpipe_bgp: true
       network:
